# promptriever-project

./: .env.example  .gitignore  README.md  multilingual_e5_base_initial_test-2.ipynb  plan.md  pyproject.toml  requirements.txt
configs/dataset/: sberquad_base.yaml  sberquad_hard_negatives.yaml  sberquad_instruction_pairs.yaml  sberquad_instruction_pairs_positive_llm.yaml  sberquad_negative_generation.yaml  sberquad_negative_generation_openrouter.yaml  sberquad_positive_generation.yaml  sberquad_positive_instruction_thresholds.yaml  sberquad_positive_instruction_validation.yaml  sberquad_promptriever_dataset.yaml  sberquad_promptriever_passage_thresholds.yaml  sberquad_promptriever_passage_validation.yaml  sberquad_promptriever_passages.yaml
configs/eval/: latency_bge_m3_base.yaml  latency_bge_m3_promptriever.yaml  latency_e5_base.yaml  latency_e5_promptriever.yaml  mfollowir_russian.yaml  mfollowir_russian_bge_m3.yaml  rumteb_russian.yaml  rumteb_russian_bge_m3.yaml
configs/models/: bge_m3.yaml  multilingual_e5_base.yaml
configs/pipeline/: bge_m3_full_promptriever.yaml  e5_full_baseline.yaml  e5_full_positive_llm.yaml  e5_full_promptriever.yaml
configs/train/: bge_m3_promptriever.yaml  e5_instruction_pairs.yaml  e5_instruction_pairs_positive_llm.yaml  e5_promptriever.yaml
docs/: research_notes.md
scripts/: plot_lora_rank_effect.py
src/promptriever_rs/: cli.py  config.py
src/promptriever_rs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/promptriever_rs/data/: hard_negatives.py  instruction_dataset.py  sberquad.py
src/promptriever_rs/evaluation/: latency.py  mfollowir.py  mteb_eval.py
src/promptriever_rs/generation/: __init__.py  groq_llama.py  validation.py
src/promptriever_rs/models/: __init__.py  registry.py
src/promptriever_rs/training/: dataset_adapters.py  train.py
src/promptriever_rs/utils/: device.py  io.py
tex/: bibliography.bib  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.run.xml  main.tex  main.toc
(+1 files in other folders)
