[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptriever-rs"
version = "0.1.0"
description = "Research scaffold for Russian Promptriever-style retriever training on SberQuAD."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Aidar Khasanov" }
]
dependencies = [
  "PyYAML>=6.0",
  "pandas>=2.2",
  "numpy>=1.26,<3",
  "datasets>=2.18",
  "groq>=0.18.0",
  "openai>=1.58,<3",
  "httpx>=0.27",
  "tqdm>=4.66",
]

[project.optional-dependencies]
train = [
  "torch>=2.2,<3",
  "sentence-transformers>=5.4.1,<6",
  "transformers>=4.56,<5",
  "accelerate>=1.5,<2",
  "peft>=0.12,<1",
  "safetensors>=0.4.3,<1",
]
eval = [
  "mteb>=1.38.56,<2",
  "sentence-transformers>=5.4.1,<6",
  "transformers>=4.56,<5",
  "peft>=0.12,<1",
  "safetensors>=0.4.3,<1",
]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
promptriever-rs = "promptriever_rs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
